--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,3 +8,4 @@
   <% end %>
 </ul>
 <%= link_to "New Article", new_article_path, class: 'new_article' %>
+<%= link_to "Tags", tags_path, class: 'new_article' %>
