--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -2,4 +2,7 @@
   <h4>Comment by <%= comment.author_name %></h4>
   <p class="comment"><%= comment.body %></p>
   <p>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</p>
+  <% if logged_in? %>
+  <%= link_to 'Delete Comment', article_comment_path(@article, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
 </div>
